# smart-order-router

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  cabal.project  docker-compose.yml  flake.nix  fourmolu.yaml  geniusyield-orderbot.cabal  start.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build.yml
compiled-scripts/: minting-policy  partial-order
config-files/: atlas-config-blockfrost.json  atlas-config-kupo.json  atlas-config-maestro.json  bot-config.json
geniusyield-dex-api/: geniusyield-dex-api.cabal
geniusyield-dex-api/src/GeniusYield/DEX/Api/: Constants.hs  PartialOrder.hs  PartialOrderConfig.hs  Types.hs  Utils.hs
geniusyield-orderbot-framework/: CHANGELOG.md  geniusyield-orderbot-framework.cabal
geniusyield-orderbot-framework/lib-common/GeniusYield/OrderBot/: Types.hs
geniusyield-orderbot-framework/lib-datasource/GeniusYield/OrderBot/: DataSource.hsig
geniusyield-orderbot-framework/lib-orderbook/GeniusYield/OrderBot/: OrderBook.hsig
geniusyield-orderbot-framework/lib-orderbook/GeniusYield/OrderBot/OrderBook/: Extra.hs
geniusyield-orderbot-framework/lib-strategies/GeniusYield/OrderBot/: Strategies.hsig
geniusyield-orderbot-framework/src/GeniusYield/: OrderBot.hs  somefakechange
geniusyield-orderbot-framework/src/GeniusYield/OrderBot/: MatchingStrategy.hs  OrderBotConfig.hs  Run.hs
geniusyield-orderbot/src/: Main.hs  OrderBotConfig.hs  Strategies.hs
geniusyield-orderbot/test/: Main.hs
geniusyield-orderbot/test/Tests/Prop/: Orderbook.hs  Strategies.hs  Utils.hs
impl/datasource-providers/GeniusYield/OrderBot/DataSource/: Providers.hs
impl/orderbook-list/GeniusYield/OrderBot/OrderBook/: List.hs
impl/strategies-impl/GeniusYield/OrderBot/Strategies/: Impl.hs
scripts/: check-bot-rewards.sh  claim-bot-rewards.sh  kupo-mainnet.sh  kupo-preprod.sh
